# pdvd-aiops

./: .env.example  .gitignore  API_README.md  GITHUB_MCP_SETUP.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: scheduled-update.yml
ai_dependency_updater.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: architecture.drawio
scripts/: scheduled_update.py
src/agents/: __init__.py  orchestrator.py
src/api/: server.py  startup.py
src/callbacks/: cost_tracker.py
src/cli/: diagnose.py  main.py
src/config/: __init__.py  llm.py
src/ecosystems/: __init__.py  cargo.py  extras.py  go.py  npm.py  pip.py
src/integrations/: github_mcp_client.py  mcp_server_manager.py  registry.py
src/integrations/definitions/: dependency_managers.py  formatters.py  linters.py  security_scanners.py
src/intelligence/: __init__.py  base.py  changelog.py  config_drift.py  failure_diagnosis.py  impact_analysis.py  multi_repo.py  pr_summary.py  reachability.py  security_prioritizer.py  update_grouping.py
src/pipeline/: __init__.py  edges.py  graph.py  state.py
src/pipeline/nodes/: analyze.py  apply_security_fixes.py  build_test.py  create_issue.py  create_pr.py  detect_commands.py  detect_integrations.py  llm_analysis.py  orchestrator.py  prepare.py  rollback.py  run_integrations.py  security_audit.py  verify.py
src/tools/: dependency_ops.py  github_tools.py  verification_tools.py
src/utils/: env.py  subprocess.py
tests/: .env.test  test_apply_updates.py  test_dependency_operations.py  test_detect_and_update_integration.py  test_e2e_pipeline.py  test_ecosystem_scenarios.py  test_outdated_detection.py  test_unit.py
tests/e2e_projects/cargo_app/: Cargo.toml
tests/scenarios/pip_pyproject/: pyproject.toml
tests/scenarios/poetry_project/: pyproject.toml
(+30 files in other folders)
