[project]
name = "ai-dependency-updater"
version = "1.0.0"
description = "Multi-agent AI system for automated dependency management"
requires-python = ">=3.9"
dependencies = [
    "langchain>=1.2.0",
    "langchain-core>=1.2.0",
    "langchain-anthropic>=1.4.0",
    "langgraph>=1.1.0",
    "anthropic>=0.86.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "pytest",
    "langchain-google-genai",
    "langchain-groq"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
dep-updater = "src.agents.orchestrator:main"
dep-server = "src.api.startup:main"
dep-diagnose = "src.cli.diagnose:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
