[tool.poetry]
name = "test-poetry-project"
version = "1.0.0"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.0"
celery = "~5.3.0"
redis = "^4.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
mypy = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
